@@ -118,4 +118,24 @@ Starting chars: \x0a \x0b \x0c \x0d \x85
         End
 ------------------------------------------------------------------
 
+/\x{212a}+/i8SI
+Capturing subpattern count = 0
+Options: caseless utf
+No first char
+No need char
+Subject length lower bound = 1
+Starting chars: K k \xe2 
+    KKkk\x{212a}
+ 0: KKkk\x{212a}
+
+/s+/i8SI
+Capturing subpattern count = 0
+Options: caseless utf
+No first char
+No need char
+Subject length lower bound = 1
+Starting chars: S s \xc5 
+    SSss\x{17f}
+ 0: SSss\x{17f}
+
 /-- End of testinput16 --/
